fixed the alignment of the calculator

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   background-color: hsl(0, 0%, 15%);
   font-family: Arial, Helvetica, sans-serif;
   border-radius: 15px;
-  max-width: 450px;
+  max-width: 430px;
   overflow: hidden;
 }
 
